tdf#125370 Fix crash when opening basic editor

Change-Id: I036a0e58bb763912f6ed0df0c964331754756628